<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable
      name="user"
      type="com.chass.teamaad291profile.User" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/profile_picture"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      android:padding="8dp"
      app:layout_constraintTop_toTopOf="parent">

      <FrameLayout
        android:id="@+id/profile_image_group"
        android:layout_width="@dimen/profile_picture_size"
        android:layout_height="@dimen/profile_picture_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/colorPrimaryLighter"
          android:contentDescription="@string/ucf_profile_image"
          android:scaleType="fitXY"
          android:photo="@{user.url}"/>

        <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:importantForAccessibility="no"
          android:scaleType="fitXY"
          app:srcCompat="@drawable/ic_circle" />
      </FrameLayout>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@{user.name}"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
      android:id="@+id/separator"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/colorPrimaryDarker"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/profile_picture" />

    <TextView
      android:id="@+id/track_label"
      android:layout_width="@dimen/main_label_dim"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/track_label"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{user.track}"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toEndOf="@id/track_label"
      app:layout_constraintBottom_toBottomOf="@id/track_label" />

    <TextView
      android:id="@+id/country_label"
      android:layout_width="@dimen/main_label_dim"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/country_label"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toStartOf="@id/track_label"
      app:layout_constraintTop_toBottomOf="@+id/track_label" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{user.country}"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toEndOf="@id/country_label"
      app:layout_constraintBottom_toBottomOf="@id/country_label" />

    <TextView
      android:id="@+id/email_label"
      android:layout_width="@dimen/main_label_dim"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/email_label"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toStartOf="@id/track_label"
      app:layout_constraintTop_toBottomOf="@+id/country_label" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{user.email}"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toEndOf="@id/email_label"
      app:layout_constraintBottom_toBottomOf="@id/email_label" />

    <TextView
      android:id="@+id/phone_label"
      android:layout_width="@dimen/main_label_dim"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/phone_number_label"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toStartOf="@id/track_label"
      app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{user.phoneNumber}"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toEndOf="@id/phone_label"
      app:layout_constraintBottom_toBottomOf="@id/phone_label" />

    <TextView
      android:id="@+id/username_label"
      android:layout_width="@dimen/main_label_dim"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/slack_username_label"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toStartOf="@id/track_label"
      app:layout_constraintTop_toBottomOf="@+id/phone_label" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{user.slackUsername}"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/main_color"
      android:textSize="@dimen/main_font_size"
      app:layout_constraintStart_toEndOf="@id/username_label"
      app:layout_constraintBottom_toBottomOf="@id/username_label" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>